# NetworkAttackDetection

./: .gitignore  CMakeLists.txt  README.md
include/: ONNXModel.h
models/: DecisionTree_CICIDS2017_NetworkAttackDetector_v1.onnx
src/: ONNXModel.cpp  main.cpp
